const baseImageUrl = 'https://image.tmdb.org/t/p/w500';
const apiKey = 'api_key=2174d146bb9c0eab47529b2e77d6b526';
const baseUrl = 'https://api.themoviedb.org/3';

// Watchlist message
const watchlistAddSuccessMessage = 'Added to Watchlist';
const watchlistRemoveSuccessMessage = 'Removed from Watchlist';
