...
                    child: Text(state.message),
                  );
                } else {
                  return Center(
                    child: SizedBox(
                      child: Text(
                        'Search Movie or TV Show by title',
                        style: kSubtitle,
                      ),
                    ),
                  );
                }
              }),
...
