...
            children: [
              Text(
                'Search Result',
                style: kHeading6,
              ),
              DropdownButton<SearchFilterOption>(
                key: const Key('search-filter-dropdown'),
                value: searchFilter,
                onChanged: (value) {
                  context.read<SearchFilterCubit>().filterBy(value);
                },
                items: const [
                  DropdownMenuItem(
...
